--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ asyncpg = "^0.26.0"
 psycopg2-binary = "^2.9.3"
 pydantic = "^1.9.2"
 sanic-pydantic = "^1.3.1"
+pycryptodome = "^3.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
