--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ sanic-testing = "^22.6.0"
 pytest-asyncio = "^0.19.0"
 sanic-openapi = "^21.12.0"
 pytest-lazy-fixture = "^0.6.3"
+pytest-dictsdiff = "^0.5.8"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
