--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pytest-asyncio = "^0.19.0"
 sanic-openapi = "^21.12.0"
 pytest-lazy-fixture = "^0.6.3"
 pytest-dictsdiff = "^0.5.8"
+black = "^22.8.0"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
